compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__binop_panic_left.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 171
expression: "pub fn negate(x) {\n    panic && x\n}"
---
import { makeError } from "../rakun.mjs";

export function negate(x) {
  return (() => {
    throw makeError(
      "panic",
      "my/mod",
      2,
      "negate",
      "`panic` expression evaluated.",
      {}
    )
  })() && x;
}
