compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__binop_panic_right.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n    x && panic\n}"
---
----- SOURCE CODE
pub fn negate(x) {
    x && panic
}

----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

export function negate(x) {
  return x && (() => {
    throw makeError(
      "panic",
      "my/mod",
      2,
      "negate",
      "`panic` expression evaluated.",
      {}
    )
  })();
}
