compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__binop_todo_left.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n    todo && x\n}"
---
----- SOURCE CODE
pub fn negate(x) {
    todo && x
}

----- COMPILED JAVASCRIPT
import { makeError } from "../rakun.mjs";

export function negate(x) {
  return (() => {
    throw makeError(
      "todo",
      "my/mod",
      2,
      "negate",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  })() && x;
}
