compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__binop_todo_right.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 180
expression: "pub fn negate(x) {\n    x && todo\n}"
---
import { makeError } from "../rakun.mjs";

export function negate(x) {
  return x && (() => {
    throw makeError(
      "todo",
      "my/mod",
      2,
      "negate",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  })();
}
