compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__negate_todo.snap
---
source: compiler-core/src/javascript/tests/bools.rs
expression: "pub fn negate(x) {\n  !todo\n}"
---
import { makeError } from "../rakun.mjs";

export function negate(x) {
  return !(() => {
    throw makeError(
      "todo",
      "my/mod",
      2,
      "negate",
      "`todo` expression evaluated. This code has not yet been implemented.",
      {}
    )
  })();
}
