compiler-core/src/javascript/tests/snapshots/rakun_core__javascript__tests__bools__shadowed_bools_and_nil_typescript.snap
---
source: compiler-core/src/javascript/tests/bools.rs
assertion_line: 81
expression: "\npub record True { True False Nil }\npub fn go(x, y) {\n  let assert True = x\n  let assert False = x\n  let assert Nil = y\n}\n"
---
----- SOURCE CODE

pub record True { True False Nil }
pub fn go(x, y) {
  let assert True = x
  let assert False = x
  let assert Nil = y
}


----- TYPESCRIPT DEFINITIONS
import type * as _ from "../rakun.d.mts";

export class True extends _.CustomType {}

export class False extends _.CustomType {}

export class Nil extends _.CustomType {}

export type True$ = True | False | Nil;

export function go(x: True$, y: True$): True$;
